--- a/Practical/Week 1/HelloWorld.html
+++ b/Practical/Week 1/HelloWorld.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 
-<html lang="en" manifest="sample.appcache">
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
 
-        
         <meta name="author" content="Rifa Achrinza" />
         <meta name="description" content="My first HTML document" />
 
