Removed leftover code.
Signed-off-by: Rifa Achrinza <25147899+achrinza@users.noreply.github.com>

--- a/Practical/Week 1/HelloWorld.html
+++ b/Practical/Week 1/HelloWorld.html
@@ -1,15 +1,17 @@
+<!--
+    Copyright (c) 2019 Rifa I. Achrinza
+    This document is licensed under MIT license (See LICENSE for details)
+-->
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <!--
+            Certain important tags have been ommited due to lack of requirement.
+        -->
+        
+        <title>Week 1 Practical</title>
 
-        <meta name="author" content="Rifa Achrinza" />
-        <meta name="description" content="My first HTML document" />
-
-        <title>Hello World</title>
-
-        <link rel="author" href="mailto:rifa@achrinza.com" />
         <link rel="icon" type="image/x-icon" href="images/HTMLBadge.ico" />
         <style>
             .a {
