--- a/Practical/Week 1/index.html
+++ b/Practical/Week 1/index.html
@@ -4,7 +4,7 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <!--
             Certain important tags have been ommited due to lack of requirement.
