Added missing tags.
Signed-off-by: Rifa Achrinza <25147899+achrinza@users.noreply.github.com>

--- a/Assignments/Week 1.1 Practical/index.html
+++ b/Assignments/Week 1.1 Practical/index.html
@@ -6,9 +6,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--
-            Certain important tags have been ommited due to lack of requirement.
-        -->
+        <meta charset="utf-8" />
+        <meta name="author" content="Rifa Achrinza" />
+        <meta name="description" content="Lorem ipsum sit amet" />
         
         <title>Week 1 Practical</title>
 
