Removed trailing slash in self-closing tags.
Signed-off-by: Rifa Achrinza <25147899+achrinza@users.noreply.github.com>

--- a/Assignments/Week 1.1 Practical/index.html
+++ b/Assignments/Week 1.1 Practical/index.html
@@ -6,13 +6,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="author" content="Rifa Achrinza" />
-        <meta name="description" content="Lorem ipsum sit amet" />
+        <meta charset="utf-8">
+        <meta name="author" content="Rifa Achrinza">
+        <meta name="description" content="Lorem ipsum sit amet">
         
         <title>Week 1 Practical</title>
 
-        <link rel="icon" type="image/x-icon" href="images/HTMLBadge.ico" />
+        <link rel="icon" type="image/x-icon" href="images/HTMLBadge.ico">
         <style>
             .a {
                 border: 6px solid #000;
@@ -23,7 +23,7 @@
         <header>
             <h1>HTML5</h1>
             <figure>
-                <img src="images/HTML5Badge.png" alt="HTML5 Badge" title="HTML5 Badge" />
+                <img src="images/HTML5Badge.png" alt="HTML5 Badge" title="HTML5 Badge">
                 <figcaption>Official HTML5 Logo</figcaption>
             </figure>
         </header>
