--- a/FED/Assignments/Week 2/Week2Practical/MyTimetable.html
+++ b/FED/Assignments/Week 2/Week2Practical/MyTimetable.html
@@ -12,6 +12,8 @@
 
         <title>My Timetable</title>
         
+        <link rel="stylesheet" href="css/styles.css">
+
         <style>
             .block-table {
                 vertical-align: middle;
