--- a/FED/Assignments/Week 3/Week3Practical/index.html
+++ b/FED/Assignments/Week 3/Week3Practical/index.html
@@ -1,6 +1,7 @@
 <!--
     Copyright (c) 2019 Rifa I. Achrinza
     This document is licensed under MIT license (See LICENSE for details)
+    SPDX-Short-Identifier: MIT
 -->
 
 <!DOCTYPE html>
