Fixed orderform.html radio buttons.
Signed-off-by: Rifa Achrinza <25147899+achrinza@users.noreply.github.com>

--- a/FED/Assignments/Week 3/Week3Practical/orderform.html
+++ b/FED/Assignments/Week 3/Week3Practical/orderform.html
@@ -47,19 +47,19 @@
                 <input type="number" min="1" max="4" value="1">
             </label>
 
-            <fieldset name="size">
+            <fieldset>
                 <legend>Size</legend>
-                <label><input type="radio">Small</label>
-                <label><input type="radio">Medium</label>
-                <label><input type="radio">Large</label>
+                <label><input name="size" type="radio">Small</label>
+                <label><input name="size" type="radio">Medium</label>
+                <label><input name="size" type="radio">Large</label>
                 </label>
             </fieldset>
 
-            <fieldset name="crust">
+            <fieldset>
                 <legend>Crust</legend>
-                <label><input type="radio">Thin</label>
-                <label><input type="radio">Thick</label>
-                <label><input type="radio">Deep Dish</label>
+                <label><input name="crust" type="radio">Thin</label>
+                <label><input name="crust" type="radio">Thick</label>
+                <label><input name="crust" type="radio">Deep Dish</label>
             </fieldset>
 
             <fieldset name="toppings">
