--- a/FED/Assignments/Week 4/Week4Practical/index.html
+++ b/FED/Assignments/Week 4/Week4Practical/index.html
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿<!--
+    Copyright (c) 2019 Rifa I. Achrinza
+    This document is licensed under MIT license (See LICENSE for details)
+    SPDX-Short-Identifier: MIT
+-->
+
+<!DOCTYPE html>
 
 <html>
 <head>
