--- a/FED/Assignments/Week 6/Week6Practical_Start/flex-menu.html
+++ b/FED/Assignments/Week 6/Week6Practical_Start/flex-menu.html
@@ -1,4 +1,10 @@
-﻿<!doctype html>
+﻿<!--
+    Copyright (c) 2019 Rifa I. Achrinza
+    This document is licensed under MIT license (See LICENSE for details)
+    SPDX-Short-Identifier: MIT
+-->
+
+<!doctype html>
 <html>
 <head>
     <title>Flexbox Product Listing Exercise</title>
