--- a/FED/Assignments/Week 8/Week8Practical/greeting.html
+++ b/FED/Assignments/Week 8/Week8Practical/greeting.html
@@ -1,5 +1,10 @@
-﻿<!DOCTYPE html>
+﻿<!--
+    Copyright (c) 2019 Rifa I. Achrinza
+    This document is licensed under MIT license (See LICENSE for details)
+    SPDX-Short-Identifier: MIT
+-->
 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
