--- a/FED/Assignments/Week 8/Week8Practical/jcEntryPoints.html
+++ b/FED/Assignments/Week 8/Week8Practical/jcEntryPoints.html
@@ -1,3 +1,9 @@
+<!--
+    Copyright (c) 2019 Rifa I. Achrinza
+    This document is licensed under MIT license (See LICENSE for details)
+    SPDX-Short-Identifier: MIT
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
